--- a/app/src/main/res/layout/set_wallpaper_item.xml
+++ b/app/src/main/res/layout/set_wallpaper_item.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/view_wallpaper"
         android:layout_width="match_parent"
@@ -14,7 +15,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/img_back_btn"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/btn_bg"
+        android:contentDescription="@string/img"
+        android:src="@drawable/ic_back_btn_white"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="70dp"
@@ -28,7 +43,6 @@
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/btn_bg"
-            android:backgroundTint="#191E31"
             android:contentDescription="@string/img"
             android:padding="10dp"
             android:src="@drawable/ic_share"
@@ -90,7 +104,6 @@
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/btn_bg"
-            android:backgroundTint="#191E31"
             android:contentDescription="@string/img"
             android:padding="10dp"
             android:src="@drawable/ic_favourite"
