--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/img_category"
         android:layout_width="100dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="10dp"
+        android:layout_margin="5dp"
         android:scaleType="centerCrop"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/item_category_bg"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/poppins_semibold"
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@color/white"
