--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_bottom"
-        app:textColor="@color/black" />
+        app:textColor="@color/primary_color" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
