--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -6,16 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.CategoryFragment">
 
-    <ImageView
-        android:id="@+id/img_back_btn"
-        android:layout_width="35dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:contentDescription="@string/img"
-        android:src="@drawable/ic_back_btn_black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_category"
@@ -24,18 +14,18 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppins_bold"
         android:text="@string/category"
-        android:textColor="@color/black"
+        android:textColor="@color/primary_color"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/img_back_btn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_category_items"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="5dp"
+        android:layout_marginTop="5dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
