--- a/app/src/main/res/layout/set_wallpaper_item.xml
+++ b/app/src/main/res/layout/set_wallpaper_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/view_wallpaper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="matrix"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
