--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,12 +14,16 @@
             android:id="@+id/action_HomeFragment_to_searchFragment"
             app:destination="@id/searchFragment"
             app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out" />
 
         <action
             android:id="@+id/action_HomeFragment_to_viewWallpaperFragment"
             app:destination="@id/viewWallpaperFragment"
             app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out" />
 
 
@@ -33,16 +37,30 @@
             android:id="@+id/action_searchFragment_to_viewWallpaperFragment"
             app:destination="@id/viewWallpaperFragment"
             app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out" />
         <argument
             android:name="query"
             app:argType="string" />
+        <argument
+            android:name="flag"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/favouriteFragment"
         android:name="com.example.dynamicwallpaper.Fragments.FavouriteFragment"
         android:label="fragment_favourite"
-        tools:layout="@layout/fragment_favourite" />
+        tools:layout="@layout/fragment_favourite">
+
+        <action
+            android:id="@+id/action_favouriteFragment_to_viewWallpaperFragment"
+            app:destination="@id/viewWallpaperFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
+    </fragment>
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.example.dynamicwallpaper.Fragments.SettingFragment"
@@ -67,6 +85,8 @@
             android:id="@+id/action_categoryFragment_to_searchFragment"
             app:destination="@id/searchFragment"
             app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
             app:popExitAnim="@anim/fade_out" />
     </fragment>
 </navigation>
