--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Base.Theme.DynamicWallpaper" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.DynamicWallpaper" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowBackground">@color/white</item>
-
+        <!-- Transparent system bars for edge-to-edge. -->
+         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+<!--        <item name="android:windowLightStatusBar">?attr/isLightTheme</item> -->
     </style>
-
-    <style name="Theme.DynamicWallpaper" parent="Base.Theme.DynamicWallpaper" />
 </resources>
