Fixed App Theme

--- a/app/src/main/res/drawable/ic_play.xml
+++ b/app/src/main/res/drawable/ic_play.xml
@@ -5,6 +5,5 @@
     android:viewportHeight="512">
   <path
       android:pathData="M94.5,47.9c-12.3,3 -19.9,7.3 -28.5,15.9 -8.5,8.5 -13.8,17.2 -17.9,29l-2.6,7.7 0,157 0,157 2.7,8c7.5,22 24.3,39 43.5,44 7.4,1.9 23.9,1.9 32.3,-0 11,-2.6 16,-4.9 65.5,-30 26.4,-13.3 90.1,-45.5 141.5,-71.5 51.4,-26 97.2,-49.6 101.6,-52.6 17,-11.2 29.5,-27.9 32.9,-43.9 1.8,-8.8 1.8,-13.2 0,-22 -3.4,-16.2 -14.9,-32.3 -31.1,-43.5 -4.3,-3 -33.4,-18.4 -64.8,-34.3 -31.4,-15.9 -76.9,-38.9 -101.1,-51.2 -128.5,-65.1 -134.7,-68.1 -142.8,-69.8 -9.8,-2.1 -22.2,-2 -31.2,0.2zM114,89.1c4.7,1 23.2,10.2 158,78.4 43.7,22.1 91.7,46.4 106.7,53.9 15,7.5 29.9,15.7 33.3,18.2 6.7,4.9 12,12.3 12,16.6 0,7 -7.6,15.6 -20,22.7 -8,4.6 -278.6,141.9 -284.4,144.3 -9,3.7 -19.7,1.8 -25,-4.3 -7.1,-8.3 -6.6,3 -6.6,-162.8 0,-148.1 0.1,-149.6 2.1,-154.1 5.6,-12.3 11.8,-15.7 23.9,-12.9z"
-      android:fillColor="@color/primary_color"
-      android:strokeColor="@color/primary_color"/>
+      android:fillColor="@color/primary_color"  />
 </vector>
