--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,11 @@
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:iconTint="#A8A8A8"
+        app:backgroundColor="@color/white"
         android:hapticFeedbackEnabled="true"
-        app:iconTintActive="#292D32"
-        app:indicatorColor="#F0F0F0"
+        app:iconTint="@color/itemActive"
+        app:iconTintActive="@color/primary_color"
+        app:indicatorColor="@color/indicatorColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
