--- a/app/src/main/res/drawable/bg_option.xml
+++ b/app/src/main/res/drawable/bg_option.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
+    <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
-        android:color="#E0E0E0" />
+        android:color="@color/primary_color" />
     <corners android:radius="8dp" />
 </shape>
