--- a/app/src/main/res/drawable/ic_both.xml
+++ b/app/src/main/res/drawable/ic_both.xml
@@ -4,11 +4,11 @@
     android:viewportWidth="512"
     android:viewportHeight="512">
     <path
-        android:fillColor="#292D32"
+        android:fillColor="@color/primary_color"
         android:pathData="M246.5,44.9c-2.5,1.3 -40.1,38.2 -102.6,100.8 -80.3,80.4 -98.9,99.5 -99.9,102.7 -1.9,6 -0.9,14.7 2.3,19.3 4.2,6 8.9,8.7 16.1,9.1 7.5,0.5 11.3,-1 17.8,-6.7l4.8,-4.2 0.2,93.8 0.3,93.8 2.2,4.1c2.7,5.1 7.2,9 12.1,10.4 2.6,0.8 50.5,1 158.4,0.8l154.6,-0.3 4.4,-3c2.3,-1.7 5.4,-5.1 6.8,-7.5l2.5,-4.5 0.3,-93.8 0.2,-93.8 4.8,4.2c6.5,5.7 10.3,7.2 17.8,6.7 7.1,-0.4 12.3,-3.4 16.3,-9.4 3,-4.3 3.9,-13.3 2.1,-19 -1,-3.2 -19.6,-22.3 -98.9,-101.7 -53.7,-53.8 -99.3,-99 -101.5,-100.5 -5.3,-3.6 -15.2,-4.3 -21.1,-1.3zM271,172.6c17.5,4.1 34,17.2 41.9,33.4 5.5,11.2 7.1,19.4 7.1,36.2 0,13.6 0,13.8 2.3,13.8 3.3,0.1 9.9,3.4 12.9,6.6 5.8,6.2 5.8,6.1 5.8,57.6 0,43.9 -0.2,47.6 -1.9,51.3 -1,2.2 -3.1,5.2 -4.7,6.7 -6.4,6 -4.1,5.8 -78.4,5.8 -74.3,-0 -72,0.2 -78.3,-5.8 -1.6,-1.5 -3.7,-4.4 -4.8,-6.4 -1.8,-3.5 -1.9,-6.5 -1.9,-51.8 0,-45.3 0.1,-48.3 1.9,-51.8 3.4,-6.6 11.3,-12.2 17.1,-12.2 1.9,-0 2,-0.6 2,-13.8 0,-16.8 1.6,-25 7.1,-36.2 7.8,-16 24.3,-29.3 41.4,-33.4 8,-1.9 22.4,-1.9 30.5,-0z"
         android:strokeColor="#00000000" />
     <path
-        android:fillColor="#292D32"
+        android:fillColor="@color/primary_color"
         android:pathData="M251,213.9c-12.8,4.1 -16,10 -16,29.1l0,13 21,-0 21,-0 0,-13c0,-13.9 -1,-18.2 -5.3,-22.8 -4.7,-5.1 -14.9,-8.2 -20.7,-6.3z"
         android:strokeColor="#00000000" />
 </vector>
