--- a/app/src/main/res/layout/load_state_footer.xml
+++ b/app/src/main/res/layout/load_state_footer.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:padding="16dp">
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_bar_bg"
+        android:indeterminateDuration="800"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +27,7 @@
         android:fontFamily="@font/poppins_regular"
         android:gravity="center"
         android:padding="8dp"
-        android:text="An error occurred. Please try again."
+        android:text="@string/please_check_your_internet_connection"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="14sp"
         android:visibility="gone"
@@ -38,7 +43,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/custom_menu_bg"
         android:fontFamily="@font/poppins_regular"
-        android:text="Retry"
+        android:text="@string/retry"
         android:textColor="@color/primary_color"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
