--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary_color">#FF000000</color>
+    <color name="primary_color">#29323B</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#F0F0F0</color>
     <color name="light_grey">#D3D3D3</color>
     <color name="blue">#0071E3</color>
+    <color name="itemActive">#A8A8A8</color>
+    <color name="indicatorColor">#F0F0F0</color>
+    <color name="bottomNavIcon">#F0F0F0</color>
+    <color name="btnBg">#80191E31</color>
+    <color name="fade">#77000000</color>
 </resources>
