--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,19 +1,3 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme for dark mode -->
-    <style name="Base.Theme.DynamicWallpaper.Dark" parent="Theme.Material3.Dark.NoActionBar">
-        <!-- Customize your dark theme here -->
-
-        <!-- Use a dark background for the window -->
-        <item name="android:windowBackground">@color/primary_color</item>
-
-        <!-- Use dark navigation and status bar colors -->
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-
-        <!-- Dark mode does not use light status bar icons -->
-        <item name="android:windowLightStatusBar">false</item>
-
-        <!-- Optional: Dark navigation bar icons (useful for very dark nav bars) -->
-<!--        <item name="android:windowLightNavigationBar">false</item>-->
-    </style>
 </resources>
