--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -60,6 +60,20 @@
         app:layout_constraintTop_toBottomOf="@+id/search_view"
         app:spanCount="3" />
 
+    <TextView
+        android:id="@+id/tv_no_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/poppins_regular"
+        android:text="@string/error_loading_wallpapers"
+        android:textColor="@color/primary_color"
+        android:textSize="20sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_searchWallpapers"
+        app:layout_constraintEnd_toEndOf="@+id/rv_searchWallpapers"
+        app:layout_constraintStart_toStartOf="@+id/rv_searchWallpapers"
+        app:layout_constraintTop_toTopOf="@+id/rv_searchWallpapers" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/recent_search_layout"
         android:layout_width="0dp"
@@ -77,7 +91,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/poppins_regular"
-            android:text="Recent Searches"
+            android:text="@string/recent_searches"
             android:textColor="@color/primary_color"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -91,7 +105,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Clear All"
+            android:text="@string/clear_all"
             android:textColor="@color/primary_color"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
