Added Dialog 'Confirm Delete' In FavouriteFragment, added download functionality to download Wallpaper and updated the Base Adapter

--- a/app/src/main/res/layout/fragment_view_wallpapper.xml
+++ b/app/src/main/res/layout/fragment_view_wallpapper.xml
@@ -14,4 +14,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_back_btn"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/btn_bg"
+        android:contentDescription="@string/img"
+        android:src="@drawable/ic_back_btn_white"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
